@@ -1,6 +1,7 @@
 2008.06.10
 
 * Updated license.
+* Updated commit script.
 
 2008.06.08
 
